# share-sathi

./: README.md  package-lock.json  package.json
.github/workflows/: build.yml
app/: globals.css  layout.tsx  page.tsx
app/_components/: BackIcon.tsx  Button.tsx  ConfirmDialog.tsx  GlobalHandler.tsx  LoadingSpinner.tsx  Models.ts  Retry.tsx  SectionLoading.tsx  Wrapper.tsx  useLoadingScreen.ts
app/fill/: page.tsx
app/open-share/: page.tsx
app/result/: page.tsx
app/users/: page.tsx
app/users/[id]/: page.tsx
app/users/[id]/portfolio/: page.tsx
app/users/[id]/transactions/: page.tsx
controller/: Cargo.toml
controller/src/: lib.rs
hooks/: useInvoke.ts
meroshare/: Cargo.toml
meroshare/src/: lib.rs
meroshare/src/models/: bank.rs  capital.rs  company.rs  ipo.rs  portfolio.rs  response.rs  transaction.rs  user.rs
meroshare/src/utils/: currency.rs  request.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
types/: index.ts
utils/: price.ts
