[package]
name = "controller"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
prettytable-rs = "^0.10"
tokio = { version = "1.28.1", features = ["full"] }
indicatif = "0.17.3"
thousands = "0.2.0"
lazy_static = "1.4.0"
async-recursion = "1.0.4"
meroshare = { path = "../meroshare" }
